[gd_scene load_steps=18 format=2]

[ext_resource path="res://tutorial/tutorial.gd" type="Script" id=1]
[ext_resource path="res://CGB01-blue_S_rounded_btn.png" type="Texture" id=2]
[ext_resource path="res://asset/short_straight_right.png" type="Texture" id=3]
[ext_resource path="res://CGB01-red_S_rounded_btn.png" type="Texture" id=4]
[ext_resource path="res://CGB01-green_S_pillShaped_btn.png" type="Texture" id=5]
[ext_resource path="res://square-deal.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://asset/ezgif-5-f42993c0a6-png-16x16-sprite-png/tile007.png" type="Texture" id=7]
[ext_resource path="res://asset/ezgif-5-f42993c0a6-png-16x16-sprite-png/tile003.png" type="Texture" id=8]
[ext_resource path="res://asset/light source.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.772549, 0.129412, 0.129412, 1 )
border_width_top = 9
border_width_bottom = 9
border_color = Color( 0.129412, 0.0156863, 0.0156863, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.14902, 0.537255, 0.686275, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 32
outline_color = Color( 0.00392157, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="tutorial" type="Node2D"]
position = Vector2( -29.9662, 5.99323 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="back" type="ColorRect" parent="."]
margin_left = -1425.0
margin_top = -721.0
margin_right = 1951.0
margin_bottom = 1524.0
color = Color( 0.101961, 0.486275, 0.937255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 51.0
margin_top = 7.0
margin_right = 360.0
margin_bottom = 517.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 32.7317
margin_top = 9.10981
margin_right = 279.732
margin_bottom = 72.1098
custom_fonts/font = SubResource( 2 )
text = "This game works like  the regul
ar snake game . You collect
orbs to make your snake grow "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel/Label"]
margin_left = 5.4126
margin_top = 60.9442
margin_right = 89.4126
margin_bottom = 100.944
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Panel/Label"]
margin_left = 151.573
margin_top = 63.3982
margin_right = 235.573
margin_bottom = 103.398
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CGB01-blue_S_rounded_btn" type="Sprite" parent="Panel/Label"]
position = Vector2( 28.7729, 79.3551 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 2 )

[node name="CGB01-blue_S_rounded_btn2" type="Sprite" parent="Panel/Label"]
position = Vector2( 214.808, 82.3281 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 2 )

[node name="CGB01-red_S_rounded_btn" type="Sprite" parent="Panel/Label/CGB01-blue_S_rounded_btn2"]
position = Vector2( -165.062, 6.53418 )
texture = ExtResource( 4 )

[node name="CGB01-green_S_pillShaped_btn" type="Sprite" parent="Panel/Label"]
position = Vector2( 63.0814, 79.0578 )
scale = Vector2( 0.11274, 0.11274 )
texture = ExtResource( 5 )

[node name="short_straight_right" type="Sprite" parent="Panel/Label"]
position = Vector2( 118.185, 81.2505 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Label2" type="Label" parent="Panel"]
margin_left = -13.9519
margin_top = 120.018
margin_right = 307.048
margin_bottom = 193.018
custom_fonts/font = SubResource( 2 )
text = "When you have  6 block in your chain 
they will start to get infected . If 
infection reachs the Head you loose
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel/Label2"]
margin_left = 18.0
margin_top = 68.0
margin_right = 145.0
margin_bottom = 105.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CGB01-blue_S_rounded_btn" type="Sprite" parent="Panel/Label2/Panel"]
position = Vector2( 118.383, 18.0056 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 2 )

[node name="CGB01-red_S_rounded_btn" type="Sprite" parent="Panel/Label2/Panel"]
position = Vector2( 30.8401, 17.1665 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn6" type="Sprite" parent="Panel/Label2/Panel"]
position = Vector2( 100.74, 17.761 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn2" type="Sprite" parent="Panel/Label2/Panel"]
position = Vector2( 48.0772, 17.4109 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn3" type="Sprite" parent="Panel/Label2/Panel"]
position = Vector2( 65.7352, 17.4106 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn4" type="Sprite" parent="Panel/Label2/Panel"]
position = Vector2( 82.8694, 17.7258 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn5" type="Sprite" parent="Panel/Label2/Panel"]
position = Vector2( 12.9667, 17.4463 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="Panel2" type="Panel" parent="Panel/Label2"]
margin_left = 170.45
margin_top = 66.8899
margin_right = 300.45
margin_bottom = 106.89
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CGB01-blue_S_rounded_btn" type="Sprite" parent="Panel/Label2/Panel2"]
position = Vector2( 118.383, 18.0056 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 2 )

[node name="CGB01-red_S_rounded_btn" type="Sprite" parent="Panel/Label2/Panel2"]
position = Vector2( 30.8401, 17.1665 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn6" type="Sprite" parent="Panel/Label2/Panel2"]
position = Vector2( 100.74, 17.761 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn2" type="Sprite" parent="Panel/Label2/Panel2"]
position = Vector2( 48.0772, 17.4109 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn3" type="Sprite" parent="Panel/Label2/Panel2"]
position = Vector2( 65.7352, 17.4106 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn4" type="Sprite" parent="Panel/Label2/Panel2"]
position = Vector2( 82.8694, 17.7258 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn5" type="Sprite" parent="Panel/Label2/Panel2"]
position = Vector2( 12.9667, 17.4463 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="short_straight_right" type="Sprite" parent="Panel/Label2"]
position = Vector2( 158.399, 85.2253 )
scale = Vector2( 0.061548, 0.059043 )
texture = ExtResource( 3 )

[node name="short_straight_right2" type="Sprite" parent="Panel/Label2"]
position = Vector2( 211.631, 113.889 )
rotation = 2.28464
scale = Vector2( 0.061548, 0.059043 )
texture = ExtResource( 3 )

[node name="Panel3" type="Panel" parent="Panel/Label2"]
margin_left = 95.4851
margin_top = 127.531
margin_right = 222.485
margin_bottom = 164.531
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CGB01-blue_S_rounded_btn" type="Sprite" parent="Panel/Label2/Panel3"]
position = Vector2( 118.383, 18.0056 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 2 )

[node name="CGB01-red_S_rounded_btn" type="Sprite" parent="Panel/Label2/Panel3"]
position = Vector2( 30.8401, 17.1665 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn6" type="Sprite" parent="Panel/Label2/Panel3"]
position = Vector2( 100.74, 17.761 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn2" type="Sprite" parent="Panel/Label2/Panel3"]
position = Vector2( 48.0772, 17.4109 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn3" type="Sprite" parent="Panel/Label2/Panel3"]
position = Vector2( 65.7352, 17.4106 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn4" type="Sprite" parent="Panel/Label2/Panel3"]
position = Vector2( 82.8694, 17.7258 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="CGB01-red_S_rounded_btn5" type="Sprite" parent="Panel/Label2/Panel3"]
position = Vector2( 12.9667, 17.4463 )
scale = Vector2( 0.122031, 0.108095 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Panel/Label2/Panel3"]
margin_left = 42.5223
margin_top = 37.7976
margin_right = 82.5223
margin_bottom = 51.7976
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 2
custom_constants/shadow_offset_y = 2
text = "GAME _OVER"

[node name="Label3" type="Label" parent="Panel"]
margin_left = 9.2961
margin_top = 304.529
margin_right = 304.296
margin_bottom = 367.529
custom_fonts/font = SubResource( 5 )
text = "You can also destroy infected part but if
touch the part of the snake that s not
infected you loose"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel/Label3"]
margin_left = 38.6362
margin_top = 63.8205
margin_right = 250.636
margin_bottom = 110.82
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="Panel/Label3/Panel"]
position = Vector2( 37.7696, 24.0961 )
scale = Vector2( 0.299207, 0.265585 )
texture = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Panel/Label3/Panel/Sprite"]
margin_left = -115.641
margin_top = 121.0
margin_right = 109.359
margin_bottom = 153.0
custom_fonts/font = SubResource( 6 )
text = "healthy part"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="short_straight_right" type="Sprite" parent="Panel/Label3/Panel/Sprite"]
position = Vector2( -3.10671, 80.3136 )
rotation = -1.5708
scale = Vector2( 0.163791, 0.125701 )
texture = ExtResource( 3 )

[node name="infected" type="Sprite" parent="Panel/Label3/Panel"]
position = Vector2( 167.857, 23.7813 )
scale = Vector2( 0.304129, 0.28035 )
texture = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="short_straight_right2" type="Sprite" parent="Panel/Label3/Panel/infected"]
position = Vector2( -0.0667725, 78.0452 )
rotation = -1.5708
scale = Vector2( 0.155165, 0.123666 )
texture = ExtResource( 3 )

[node name="Label2" type="Label" parent="Panel/Label3/Panel/infected"]
margin_left = -118.351
margin_top = 115.75
margin_right = 106.649
margin_bottom = 147.75
custom_fonts/font = SubResource( 6 )
text = "infected part"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label4" type="Label" parent="Panel"]
margin_left = 20.4931
margin_top = 449.34
margin_right = 277.493
margin_bottom = 503.34
custom_fonts/font = SubResource( 7 )
text = "PS: you can go throught walls 
and come back on the other side"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 167.764, 496.36 )
scale = Vector2( 4.51823, 4.40809 )
normal = ExtResource( 8 )
pressed = ExtResource( 7 )

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 1.2, 1.2 )

[node name="Label" type="Label" parent="Node2D"]
margin_left = 138.312
margin_top = 458.198
margin_right = 200.312
margin_bottom = 490.198
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.00392157, 0, 0, 1 )
text = "close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 202.376, 232.087 )
scale = Vector2( 1.39527, 1.4533 )
texture = ExtResource( 9 )

[node name="Light2D2" type="Light2D" parent="."]
visible = false
position = Vector2( 202.376, 583.3 )
scale = Vector2( 0.195219, 0.219184 )
texture = ExtResource( 9 )

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
